Refactor batch processing commands and improve error handling
- Updated `ProcessBatchCommandHandler` to use getter methods for command properties.
- Changed `BatchStatusQuery` to import `BatchId` from the shared value objects package.
- Modified `AsyncBatchProcessor` to include file name in the batch processing command.
- Enhanced `UploadAndProcessFileCommand` to use `FileName` value object and validate inputs.
- Updated `UploadAndProcessFileCommandHandler` to handle `BankId` and `BatchId` as value objects, improving validation and error handling.
- Refactored event classes to include `BatchId` and `fileName` for better tracking.
- Adjusted repository implementations to utilize the new `BatchId` structure.
- Improved controller logic in `UploadAndProcessFileController` to streamline file upload and processing, including enhanced error handling.
- Added a new SQL migration to introduce a numeric ID primary key to the `metrics_file` table, ensuring data integrity and uniqueness.